some-nav-styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   </head>
   <body>
     <header>
-      <p>Our Online Store</p>
-      <p>Home</p>
-      <p>Best Sellers</p>
-      <p>Sale</p>
+      <div class="nav-bar">
+        Our Online Store
+        <div>
+          <ul>
+            <li><a>Home</a></li>
+            <li><a>Best Sellers</a></li>
+            <li><a>Sale</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
     <section>
       <div id="product-container">
