product-cards-styled

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
     <header>
       <div class="nav-bar">
-        Our Online Store
+        <h1 id="site-name">Our Online Store</h1>
         <div>
           <ul>
             <li><a>Home</a></li>
+            <li><a>New Arrivals</a></li>
             <li><a>Best Sellers</a></li>
             <li><a>Sale</a></li>
           </ul>
@@ -22,25 +23,25 @@
     <section>
       <div id="product-container">
         <div class="product">
-          <img />
+          <img src="./assets/image-holder-icon-614x460.png" />
           <h2>Product</h2>
           <p>Price</p>
           <button>Add to Cart</button>
         </div>
         <div class="product">
-          <img />
+          <img src="./assets/image-holder-icon-614x460.png" />
           <h2>Product</h2>
           <p>Price</p>
           <button>Add to Cart</button>
         </div>
         <div class="product">
-          <img />
+          <img src="./assets/image-holder-icon-614x460.png" />
           <h2>Product</h2>
           <p>Price</p>
           <button>Add to Cart</button>
         </div>
         <div class="product">
-          <img />
+          <img src="./assets/image-holder-icon-614x460.png" />
           <h2>Product</h2>
           <p>Price</p>
           <button>Add to Cart</button>
