--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1 id="site-name">Our Online Store</h1>
         <div>
           <ul>
-            <li><a>Home</a></li>
-            <li><a>New Arrivals</a></li>
-            <li><a>Best Sellers</a></li>
-            <li><a>Sale</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#newarrivals">New Arrivals</a></li>
+            <li><a href="#bestsellers">Best Sellers</a></li>
+            <li><a href="#sale">Sale</a></li>
           </ul>
         </div>
       </div>
